manage to a version

--- a/chart/harbor-scanner/Chart.yaml
+++ b/chart/harbor-scanner/Chart.yaml
@@ -1,17 +1,16 @@
 apiVersion: v2
-appVersion: 2.6.1
-description: ArkSec Cloud Native Security Platform
+appVersion: 1.0.0
+description: ArkSec Harbor Scanner System
 home: https://www.arksec.cn
 keywords:
 - security
 - devsecops
-- host
-- network
+- harbor
+- registry
 - images
-- edge
 maintainers:
 - email: tech@arksec.io
   name: Tech.ArkSec
 name: scanner
 type: application
-version: 2.0.1
+version: 0.1.0
