--- a/chart/harbor-scanner/templates/cluster/post-install/job-init-mongodb.yaml
+++ b/chart/harbor-scanner/templates/cluster/post-install/job-init-mongodb.yaml
@@ -1,4 +1,3 @@
-{{- if and .Values.cluster.enabled .Values.cluster.migrate.enabled -}}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -21,10 +20,8 @@ spec:
 {{ include "arksec.labels" . | indent 8 }}
         component.arksec.io/name: init-mongodb
     spec:
-      {{- if .Values.common.waitress.enabled }}
       initContainers:
 {{ include "common.waitress.container" . | indent 6 }}
-      {{- end }}
       containers:
       - name: migrate
         image: {{ include "arksec.cluster.migrate.image" . }}
@@ -35,15 +32,12 @@ spec:
         - --mongo-endpoint={{ include "arksec.cluster.mongodb.host" . }}:{{ include "arksec.cluster.mongodb.port" . }}
         - --mongo-password={{ include "arksec.cluster.mongodb.rawPassword" . }}
         - --mongo-username={{ include "arksec.cluster.mongodb.username" . }}
-        {{- if .Values.cluster.migrate.resources }}
+        {{- if .Values.migrate.resources }}
         resources:
-{{ toYaml .Values.cluster.migrate.resources | indent 10 }}
+{{ toYaml .Values.migrate.resources | indent 10 }}
         {{- end }}
       restartPolicy: Never
-      imagePullSecrets: 
-{{ include "arksec.global.imagePullSecret" . | indent 8 }}
-      {{- with .Values.cluster.migrate.nodeSelector }}
+      {{- with .Values.migrate.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
       {{- end -}}
-{{- end -}}
