--- a/chart/harbor-scanner/templates/cluster/scanner/scanner-cm-env.yaml
+++ b/chart/harbor-scanner/templates/cluster/scanner/scanner-cm-env.yaml
@@ -1,4 +1,3 @@
-{{- if and .Values.cluster.enabled .Values.cluster.scanner.enabled (eq .Values.cluster.scanner.version "v2") -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -7,13 +6,10 @@ metadata:
 {{ include "arksec.labels" . | indent 4 }}
     component.arksec.io/name: scanner
 data:
-  CLAMAV_ADDR: localhost
+  CLAMAV_ADDR: 127.0.0.1
   CLAMAV_PORT: "3310"
   CLAMAV_MAP_FOLDER: /data
   CLAMAV_DST_FOLDER: /data
   XDG_CACHE_HOME: /scanner_data/
   REDSTONE_LISTEN: localhost:8080
   REDSTONE_TIMEOUT: 600s
-
-{{- end -}}
-
