--- a/chart/harbor-scanner/templates/cluster/scanner/scanner-dpl.yaml
+++ b/chart/harbor-scanner/templates/cluster/scanner/scanner-dpl.yaml
@@ -1,4 +1,3 @@
-{{- if and .Values.cluster.enabled .Values.cluster.scanner.enabled (eq .Values.cluster.scanner.version "v2") -}}
 apiVersion: {{ include "common.capabilities.deployment.apiVersion" . }}
 kind: Deployment
 metadata:
@@ -7,7 +6,7 @@ metadata:
 {{ include "arksec.labels" . | indent 4 }}
     component.arksec.io/name: scanner
 spec:
-  replicas: {{ .Values.cluster.scanner.replicas }}
+  replicas: {{ .Values.scanner.replicas }}
   selector:
     matchLabels:
 {{ include "arksec.selectorLabels" . | indent 6 }}
@@ -20,7 +19,7 @@ spec:
     spec:
       initContainers:
       - name: copy-vuln-data
-        image: {{ include "arksec.cluster.scanner.feed.image" . }}
+        image: {{ include "arksec.cluster.scanner.init.image" . }}
         imagePullPolicy: {{ .Values.global.imagePullPolicy }}
         command:
           - /bin/sh
@@ -30,9 +29,8 @@ spec:
         volumeMounts:
           - name: trivy-data
             mountPath: /trivy
-{{ include "common.platform.openshiftPrivileged" . | indent 8 }}
       - name: copy-av-data
-        image: {{ include "arksec.cluster.scanner.feed.image" . }}
+        image: {{ include "arksec.cluster.scanner.init.image" . }}
         imagePullPolicy: {{ .Values.global.imagePullPolicy }}
         command:
         - /bin/sh
@@ -43,13 +41,10 @@ spec:
         volumeMounts:
         - name: clamav-data
           mountPath: /clamav
-{{ include "common.platform.openshiftPrivileged" . | indent 8 }}
-      {{- if .Values.common.waitress.enabled }}
 {{ include "common.waitress.container" . | indent 6 }}
-      {{- end }}
       containers:
-      - name: scanner
-        image: {{ include "arksec.cluster.scanner.image" . }}
+      - name: engine
+        image: {{ include "arksec.cluster.scanner.engine.image" . }}
         imagePullPolicy: {{ .Values.global.imagePullPolicy }}
         command:
         - "/httpscanner"
@@ -60,13 +55,14 @@ spec:
             name: {{ include "arksec.cluster.scanner" . }}
         - configMapRef:
             name: {{ include "arksec.cluster" . }}-endpoints
+        - configMapRef:
+            name: {{ include "arksec.cluster" . }}-common
         volumeMounts:
-
         - name: shared-data
           mountPath: /data
-        {{- if .Values.cluster.scanner.resources }}
+        {{- with .Values.scanner.engine.resources }}
         resources:
-{{ toYaml .Values.cluster.scanner.resources | indent 10 }}
+{{ toYaml . | indent 10 }}
         {{- end }}
       - name: server
         image: {{ include "arksec.cluster.scanner.server.image" . }}
@@ -83,20 +79,13 @@ spec:
         volumeMounts:
         - name: trivy-data
           mountPath: /scanner_data/trivy/
-        {{- if .Values.cluster.scanner.server.resources }}
+        {{- with .Values.scanner.server.resources }}
         resources:
-{{ toYaml .Values.cluster.scanner.server.resources | indent 10 }}
+{{ toYaml . | indent 10 }}
         {{- end }}
-
-      {{- if .Values.cluster.scanner.clamav.enabled }}
       - name: clamav
         image: {{ include "arksec.cluster.scanner.clamav.image" . }}
         imagePullPolicy: {{ .Values.global.imagePullPolicy }}
-{{/*        command:*/}}
-{{/*        - /bin/sh*/}}
-{{/*        - -c*/}}
-{{/*        - |*/}}
-{{/*           ls -tlrh  /var/lib/clamav/*/}}
         envFrom:
         - configMapRef:
             name: {{ include "arksec.cluster.scanner" . }}
@@ -107,12 +96,10 @@ spec:
           mountPath: /data
         - name: clamav-data
           mountPath: /var/lib/clamav/
-        {{- if .Values.cluster.scanner.clamav.resources }}
+        {{- with .Values.scanner.clamav.resources }}
         resources:
-{{ toYaml .Values.cluster.scanner.clamav.resources | indent 10 }}
+{{ toYaml . | indent 10 }}
         {{- end }}
-      {{- end }}
-
       volumes:
       - emptyDir: {}
         name: shared-data
@@ -120,11 +107,7 @@ spec:
         name: trivy-data
       - emptyDir: {}
         name: clamav-data
-
-      imagePullSecrets: 
-{{ include "arksec.global.imagePullSecret" . | indent 8 }}
-      {{- with .Values.cluster.scanner.nodeSelector }}
+      {{- with .Values.scanner.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
       {{- end -}}
-{{- end -}}
